--- a/08_Diabetes_Project/diabetes.ipynb
+++ b/08_Diabetes_Project/diabetes.ipynb
@@ -774,8 +774,7 @@
    ],
    "source": [
     "melhor_n = df.sort_values(by='rank_test_score')['param_n_neighbors'].iloc[0]\n",
-    "print(melhor_n)\n",
-    "df.head()"
+    "print(melhor_n)"
    ]
   },
   {
